# darling-icu

./: README.md
darling/notes/: UPDATE_SOURCE.md
darling/scripts/: build_icusources.sh
icuSources/: CMakeLists.txt
icuSources/common/: udata.cpp
icuSources/common/unicode/: uconfig.h  udata.h
icuSources/i18n/: ucoleitr.cpp
include/: unicode
include/unicode/: alphaindex.h  appendable.h  basictz.h  brkiter.h  bytestream.h  bytestrie.h  bytestriebuilder.h  calendar.h  caniter.h  chariter.h  choicfmt.h  coleitr.h  coll.h  compactdecimalformat.h  curramt.h  currpinf.h  currunit.h  datefmt.h  dbbi.h  dcfmtsym.h  decimfmt.h  docmain.h  dtfmtsym.h  dtintrv.h  dtitvfmt.h  dtitvinf.h  dtptngen.h  dtrule.h  enumset.h  errorcode.h  fieldpos.h  filteredbrk.h  fmtable.h  format.h  fpositer.h  gender.h  gregocal.h  icudataver.h  icuplug.h  idna.h  (+130 more)
